# umba-tools

./: .gitignore  CMakeLists.txt  README.md  _build_all_subprojects_msvc2019.bat  _build_all_subprojects_msvc2022.bat  _clone-tools.bat  _push_tools.bat  _push_tools_wlog.bat  _update_tools.bat  _update_tools_wlog.bat  clear-logs.bat  deploy_local.bat  deploy_local_log.bat  make_distr.bat  make_distr_log.bat  umba-tools_msvc2019.sln  ~call_build_all_msvc_impl.bat
_prj_msvc2019/: _all.vcxproj
doc/: umba-tools-brief-ru.txt
